--- a/Chimpanzee.cabal
+++ b/Chimpanzee.cabal
@@ -51,7 +51,7 @@ extra-source-files:
 
 library
     -- Modules exported by the library.
-    exposed-modules:  Atbash
+    exposed-modules:  MyLib
 
     -- Modules included in this library but not exported.
     -- other-modules:
