--- a/Chimpanzee.cabal
+++ b/Chimpanzee.cabal
@@ -16,7 +16,8 @@ extra-source-files:
                     README.md
 
 library
-    exposed-modules:    Atbash
+    exposed-modules:    Atbash,
+                        Rot13
     hs-source-dirs:     src
     default-language:   Haskell2010
     build-depends:      text,
@@ -32,7 +33,14 @@ test-suite atbash-test
     type:               exitcode-stdio-1.0
     default-language:   Haskell2010
     build-depends:      Chimpanzee,
-                        text,
+                        base ^>=4.14.1.0
+
+test-suite rot13-test
+    hs-source-dirs:     labs
+    main-is:            rot13-test.hs
+    type:               exitcode-stdio-1.0
+    default-language:   Haskell2010
+    build-depends:      Chimpanzee,
                         base ^>=4.14.1.0
 
 test-suite test
