--- a/Chimpanzee.cabal
+++ b/Chimpanzee.cabal
@@ -16,7 +16,8 @@ extra-source-files:
                     README.md
 
 library
-    exposed-modules:    Atbash
+    exposed-modules:    Atbash,
+                        Caesar
     hs-source-dirs:     src
     default-language:   Haskell2010
     build-depends:      text,
@@ -41,4 +42,13 @@ test-suite test
     type:               exitcode-stdio-1.0
     default-language:   Haskell2010
     build-depends:      text,
+                        base ^>=4.14.1.0
+
+test-suite caesar-test
+    hs-source-dirs:     labs
+    main-is:            caesar-test.hs
+    type:               exitcode-stdio-1.0
+    default-language:   Haskell2010
+    build-depends:      Chimpanzee,
+                        text,
                         base ^>=4.14.1.0
