--- a/Chimpanzee.cabal
+++ b/Chimpanzee.cabal
@@ -2,7 +2,7 @@ cabal-version:      2.4
 name:               Chimpanzee
 version:            0.1.0.0
 synopsis:           Haskell Algorithm Library
-description:
+description:        Implementation of Algorithm on Haskell Programming Language
 homepage:           https://github.com/DevCapacitor/Chimpanzee
 bug-reports:        https://github.com/DevCapacitor/Chimpanzee/issues
 copyright:          DevCapacitor 2021
@@ -21,8 +21,7 @@ library
                         Caesar
     hs-source-dirs:     src
     default-language:   Haskell2010
-    build-depends:      text,
-                        base ^>=4.14.1.0
+    build-depends:      base ^>=4.14.1.0
     -- Modules included in this library but not exported.
     -- other-modules:
     -- LANGUAGE extensions used by modules in this package.
@@ -49,8 +48,7 @@ test-suite test
     main-is:            test.hs
     type:               exitcode-stdio-1.0
     default-language:   Haskell2010
-    build-depends:      text,
-                        base ^>=4.14.1.0
+    build-depends:      base ^>=4.14.1.0
 
 test-suite caesar-test
     hs-source-dirs:     labs
@@ -58,5 +56,4 @@ test-suite caesar-test
     type:               exitcode-stdio-1.0
     default-language:   Haskell2010
     build-depends:      Chimpanzee,
-                        text,
                         base ^>=4.14.1.0
