--- a/Chimpanzee.cabal
+++ b/Chimpanzee.cabal
@@ -16,10 +16,10 @@ extra-source-files:
                     README.md
 
 library
-    exposed-modules:    Atbash
-                        Rot13
-                        Caesar
-                        Affine
+    exposed-modules:    Chimpanzee.Atbash
+                        Chimpanzee.Rot13
+                        Chimpanzee.Caesar
+                        Chimpanzee.Affine
     hs-source-dirs:     src
     default-language:   Haskell2010
     build-depends:      base ^>=4.16.3.0
