--- a/Chimpanzee.cabal
+++ b/Chimpanzee.cabal
@@ -22,16 +22,26 @@ library
                         Chimpanzee.Affine
     hs-source-dirs:     src
     default-language:   Haskell2010
-    build-depends:      base ^>=4.15.1.0
+    build-depends:      base >=4.15.0.0
     -- Modules included in this library but not exported.
     -- other-modules:
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
 
-test-suite test
-    hs-source-dirs:     labs
-    main-is:            test.hs
+test-suite encryption-uppercase
+    hs-source-dirs:     src/test
+    main-is:            test-encryption-upper.hs
     type:               exitcode-stdio-1.0
     default-language:   Haskell2010
-    build-depends:      Chimpanzee,
-                        base ^>=4.15.1.0
+    build-depends:        Chimpanzee
+                        , base >=4.15.0.0
+                        , HUnit
+
+test-suite encryption-lowercase
+    hs-source-dirs:     src/test
+    main-is:            test-encryption-lower.hs
+    type:               exitcode-stdio-1.0
+    default-language:   Haskell2010
+    build-depends:        Chimpanzee
+                        , base >=4.15.0.0
+                        , HUnit
